fix buttons border radius and gaps

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ button {
   cursor: pointer;
   outline: inherit;
   border: 0.1rem solid;
-  border-radius: 0.1rem;
+  border-radius: 0.25rem;
   width: fit-content;
 }
 
@@ -136,7 +136,7 @@ nav {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 10px;
+  gap: 3rem;
   flex-wrap: wrap;
   margin-right: -15px;
   margin-left: -15px;
